--- a/target_page_1_replay.html
+++ b/target_page_1_replay.html
@@ -4,17 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="target_page_1_replay.css">
+	<script type="text/javascript" src="sherzodbek_replay.js"></script>
 
 	<body>
+		<div id="display-pointer">
+			
+		</div>
 		<!-- Navbar (sit on top) -->
 		<div class="w3-top">
 		  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
 		    <a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
 		    <!-- Float links to the right. Hide them on small screens -->
 		    <div class="w3-right w3-hide-small">
-		      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-		      <a href="#about" class="w3-bar-item w3-button">About</a>
-		      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+		      <a class="w3-bar-item w3-button" onclick="replayMousemove()">Play</a>
 		    </div>
 		  </div>
 		</div>
@@ -157,7 +160,6 @@
 		<footer class="w3-center w3-black w3-padding-16">
 		  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 		</footer>
-		
-	<script type="text/javascript" src="sherzodbek_tracking.js"></script>
+
 	</body>
 </html>
